# platform-santaserver

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  Dockerfile  FEEDBACK_PRD003.md  FRONTEND_SECURITY_IMPLEMENTATION_PLAN.md  Makefile  PLAYWRIGHT_TEST_STATUS.md  PRODUCT_PLAN.md  README.md  docker-compose.yml
.agent-os/product/: decisions.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.prds/: 001-single-container-architecture-migration.md  002-read-only-filesystem-nginx-tmp.md  003-authentication-and-rbac-system.md  004-frontend-authentication-components.md
archive/: MIGRATION_SUMMARY.md
archive/multi-container/: backend-Dockerfile  docker-compose.yml  frontend-Dockerfile  nginx.conf  unified-container-migration.md
backend/: .env.example  API.md  AUTHENTICATION.md  Dockerfile  FEEDBACK_PRD003_RESPONSE.md  alembic.ini  pyproject.toml  requirements.txt  tox.ini
backend/alembic/: env.py
backend/alembic/versions/: 20250807_1420_001_initial_auth_schema.py  20250807_1425_002_foreign_key_constraints.py  20250807_1430_003_default_roles_data.py
backend/app/: __init__.py  main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  health.py  users.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  auth.py
backend/app/schemas/: __init__.py  auth.py
backend/app/services/: __init__.py  auth_service.py
backend/tests/: conftest.py  test_auth_endpoints.py  test_health.py  test_user_management.py
config/: entrypoint.sh  nginx-unified.conf  nginx.conf  supervisor-watchdog.py  supervisord.conf
frontend/: .eslintrc.cjs  .prettierignore  Dockerfile  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
frontend/playwright/: auth.setup.ts  (+6 more)
nginx/: Dockerfile
scripts/: build.sh
(+27 files in other folders)
